# tracetools_analysis

./: .gitlab-ci.yml  README.md  codecov.yml  convert.py  get_branch.py  package.xml  process.py  setup.py  trace.py
.github/workflows/: test.yml
analysis/: Callback_duration.ipynb  lttng_models.py  ros_processor.py  to_pandas.py
conversion/: ctf.py  ros.py
ros2trace_analysis/: CHANGELOG.rst  package.xml  setup.py
ros2trace_analysis/ros2trace_analysis/: __init__.py
ros2trace_analysis/ros2trace_analysis/command/: trace_analysis.py
ros2trace_analysis/ros2trace_analysis/verb/: convert.py  process.py
test/: test_tracepoints.py
test_ros2trace_analysis/: CHANGELOG.rst  package.xml  setup.py
test_ros2trace_analysis/test/test_ros2trace_analysis/: test_process.py
tracetools_analysis/: CHANGELOG.rst  convert.py  package.xml  process.py  setup.cfg  setup.py
tracetools_analysis/analysis/: callback_duration.ipynb  data_model.py  handler.py  lifecycle_states.ipynb  load.py  lttng_models.py  memory_usage.ipynb  processor.py  profile.ipynb  ros2_processor.py  ros_processor.py  to_pandas.py
tracetools_analysis/analysis/sample_data/: converted_pingpong
tracetools_analysis/conversion/: ctf.py
tracetools_analysis/docs/source/: about.rst  api.rst  conf.py  index.rst
tracetools_analysis/docs/source/api/: tracetools_analysis.rst
tracetools_analysis/launch/: lifecycle_states.launch.py  memory_usage.launch.py  pingpong.launch.py  profile.launch.py
tracetools_analysis/test/: test_mypy.py  test_utils.py  utils.py
tracetools_analysis/test/tracetools_analysis/: test_autoprocessor.py  test_data_model_util.py  test_dependency_solver.py  test_loading.py  test_process_command.py  test_processor.py  test_profile_handler.py  test_utils.py
tracetools_analysis/tracetools_analysis/: __init__.py  analyze.py  cb_durations.py  convert.py  process.py  utils.py
tracetools_analysis/tracetools_analysis/analysis/: cpu_time_processor.py  data_model.py  handler.py  load.py  lttng_models.py  ros2_processor.py  utils.py
tracetools_analysis/tracetools_analysis/analysis/data_model/: cpu_time.py  ros.py
tracetools_analysis/tracetools_analysis/conversion/: ctf.py
tracetools_analysis/tracetools_analysis/data_model/: __init__.py  cpu_time.py  memory_usage.py  profile.py  ros.py  ros2.py
tracetools_analysis/tracetools_analysis/loading/: __init__.py
tracetools_analysis/tracetools_analysis/processor/: __init__.py  cpu_time.py  handler.py  memory_usage.py  profile.py  ros2.py
tracetools_analysis/tracetools_analysis/scripts/: __init__.py  auto.py  cb_durations.py  memory_usage.py
tracetools_analysis/tracetools_analysis/utils/: __init__.py  cpu_time.py  memory_usage.py  profile.py  ros2.py
tracing/: lttng.py  names.py
