<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2trace_analysis</name>
  <version>3.0.0</version>
  <description>The trace-analysis command for ROS 2 command line tools.</description>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://index.ros.org/p/ros2trace_analysis/</url>
  <url type="repository">https://gitlab.com/ros-tracing/tracetools_analysis</url>
  <url type="bugtracker">https://gitlab.com/ros-tracing/tracetools_analysis/-/issues</url>
  <author email="christophe.bedard@apex.ai">Christophe Bedard</author>

  <depend>ros2cli</depend>
  <depend>tracetools_analysis</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
