<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tracetools_analysis</name>
  <version>3.1.0</version>
  <description>Tools for analysing trace data.</description>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Lütkebohle</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://index.ros.org/p/tracetools_analysis/</url>
  <url type="repository">https://github.com/ros-tracing/tracetools_analysis</url>
  <url type="bugtracker">https://github.com/ros-tracing/tracetools_analysis/issues</url>
  <author email="ingo.luetkebohle@de.bosch.com">Ingo Lütkebohle</author>
  <author email="fixed-term.christophe.bourquebedard@de.bosch.com">Christophe Bedard</author>

  <depend>tracetools_read</depend>
  <depend>tracetools_trace</depend>
  <depend>python3-pandas</depend>

  <exec_depend>jupyter-notebook</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
